--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "express": "^4.18.2",
     "https": "^1.0.0",
     "jsonwebtoken": "^9.0.2",
+    "lodash": "^4.17.21",
+    "moment-timezone": "^0.5.45",
     "mongoose": "^7.6.9",
     "password-hash": "^1.2.2",
     "phone": "^3.1.42"
@@ -18,6 +20,7 @@
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.6",
+    "@types/lodash": "^4.17.0",
     "@types/mongoose": "^5.11.97",
     "@types/morgan": "^1.9.9",
     "@types/password-hash": "^1.2.24",
