--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -2,7 +2,8 @@
 steps:
   # Build the container image
   - name: gcr.io/cloud-builders/docker
-    args: ["build", "-t", "gcr.io/$PROJECT_ID/${_SERVICE_NAME}:${SHORT_SHA}", "."]
+    args:
+      ["build", "-t", "gcr.io/$PROJECT_ID/${_SERVICE_NAME}:${SHORT_SHA}", "."]
     id: Building the container image
   # Push the container image to Container Registry
   - name: "gcr.io/cloud-builders/docker"
@@ -24,17 +25,17 @@ steps:
         "--allow-unauthenticated",
       ]
   # Deploy development
-  - name: "gcr.io/cloud-builders/gcloud"
-    args:
-      [
-        "run",
-        "deploy",
-        "${_SERVICE_NAME_DEV}",
-        "--image",
-        "gcr.io/$PROJECT_ID/${_SERVICE_NAME}:${SHORT_SHA}",
-        "--region",
-        "asia-southeast1",
-        "--platform",
-        "managed",
-        "--allow-unauthenticated",
-      ]
+  # - name: "gcr.io/cloud-builders/gcloud"
+  #   args:
+  #     [
+  #       "run",
+  #       "deploy",
+  #       "${_SERVICE_NAME_DEV}",
+  #       "--image",
+  #       "gcr.io/$PROJECT_ID/${_SERVICE_NAME}:${SHORT_SHA}",
+  #       "--region",
+  #       "asia-southeast1",
+  #       "--platform",
+  #       "managed",
+  #       "--allow-unauthenticated",
+  #     ]
