--- a/package.json
+++ b/package.json
@@ -6,17 +6,18 @@
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
+    "firebase-admin": "^12.1.1",
     "https": "^1.0.0",
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
     "moment-timezone": "^0.5.45",
     "mongoose": "^7.6.9",
-    "password-hash": "^1.2.2",
-    "phone": "^3.1.42",
-    "vntk": "^1.4.4",
     "morgan": "^1.10.0",
     "nodemon": "^3.1.0",
-    "typescript": "^5.3.3"
+    "password-hash": "^1.2.2",
+    "phone": "^3.1.42",
+    "typescript": "^5.3.3",
+    "vntk": "^1.4.4"
   },
   "devDependencies": {
     "@types/body-parser": "^1.19.5",
