--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "moment-timezone": "^0.5.45",
     "mongoose": "^7.6.9",
     "morgan": "^1.10.0",
+    "nodemailer": "^6.9.14",
     "nodemon": "^3.1.0",
     "password-hash": "^1.2.2",
     "phone": "^3.1.42",
